Fixed a issue in userSettings where the followers modal would overlap with form elements. Now it is fixed.

--- a/src/components/userSettings.css
+++ b/src/components/userSettings.css
@@ -3,7 +3,9 @@
 }
 
 .page-content {
-    margin: 10px;
+    flex : 1;
+    margin: auto;
+    padding: 10px;
 }
 
 @media only screen and (max-width:800px){
